# pico-mcp2515

./: CMakeLists.txt  baudrate-clock config.xlsx  can.h  main.cpp  mcp2515.cpp  mcp2515.h  pico-can-read.cpp  pico-can-write.cpp
